Atualizado em 31/08/2025 as 23h05

--- a/neurodivergentes/templates/neurodivergentes/pei_detail.html
+++ b/neurodivergentes/templates/neurodivergentes/pei_detail.html
@@ -111,11 +111,11 @@
     <div class="header">
         <h1>Plano Educacional Individualizado</h1>
         <h2>{{ aluno.nome_completo }}</h2>
-        <p>Planejamento {{ pei.get_mes_display }}/{{ pei.ano }}</p>
+        <p>Planejamento {{ pei.ano }}</p>
     </div>
 
     <div class="pei-section">
-        <h3 class="pei-title">PEI - {{ pei.get_mes_display }}/{{ pei.ano }}</h3>
+        <h3 class="pei-title">PEI - {{ pei.ano }}</h3>
         <div class="pei-content">
             <div class="info-row">
                 <div class="info-col">
