--- a/neurodivergentes/templates/neurodivergentes/pei_list.html
+++ b/neurodivergentes/templates/neurodivergentes/pei_list.html
@@ -88,7 +88,7 @@
                                         <input class="form-check-input" type="checkbox" value="{{ pei.id }}">
                                     </div>
                                 </td>
-                                <td>{{ pei.get_mes_display }}/{{ pei.ano }}</td>
+                                <td>{{ pei.ano }}</td>
                                 <td>{{ pei.pedagogo_responsavel|default:"Não atribuído" }}</td>
                                 <td>{{ pei.metas.count }}</td>
                                 <td>
