--- a/neurodivergentes/templates/neurodivergentes/relatorio_pei_geral.html
+++ b/neurodivergentes/templates/neurodivergentes/relatorio_pei_geral.html
@@ -152,7 +152,7 @@
 
     {% for pei in peis %}
     <div class="pei-section">
-        <h3 class="pei-title">PAEE - {{ pei.get_mes_display }}/{{ pei.ano }}</h3>
+        <h3 class="pei-title">PAEE - {{ pei.ano }}</h3>
         
         <div class="pei-content">
             <div class="info-row">
