--- a/templates/admin/base_material.html
+++ b/templates/admin/base_material.html
@@ -270,6 +270,9 @@
             <a class="btn btn-outline-primary btn-sm mb-0 me-2" href="{% url 'realtime:chat_list' %}">
               <i class="material-symbols-rounded opacity-10" style="font-size: 20px;">chat</i> Mensagens
             </a>
+            <a class="btn btn-outline-primary btn-sm mb-0 me-2" href="/agendamento/calendario/">
+              <i class="material-symbols-rounded opacity-10" style="font-size: 20px;">calendar_month</i> Agenda
+            </a>
             <a class="btn btn-outline-primary btn-sm mb-0 me-2" href="https://sanyahudesigner.com.br" target="_blank">
               <i class="material-symbols-rounded opacity-10" style="font-size: 20px;">help</i> Ajuda
             </a>
