--- a/templates/admin/includes/navbar.html
+++ b/templates/admin/includes/navbar.html
@@ -47,6 +47,13 @@
                 </a>
             </li>
             
+            <!-- Ícone da agenda -->
+            <li class="nav-item">
+                <a href="/agendamento/calendario/" class="nav-link" title="Agenda">
+                    <i class="fas fa-calendar-alt"></i>
+                </a>
+            </li>
+            
             <!-- Ícone de notificações -->
             <li class="nav-item dropdown">
                 <a class="nav-link" data-toggle="dropdown" href="#" id="notificationDropdown" role="button" aria-expanded="false" title="Notificações">
