--- a/neurodivergentes/templates/neurodivergentes/relatorio_geral_aluno.html
+++ b/neurodivergentes/templates/neurodivergentes/relatorio_geral_aluno.html
@@ -202,6 +202,11 @@
                 <span class="info-label">Frequência Média:</span>
                 {{ frequencia_media }} atendimento(s)
             </div>
+            
+            <div class="info-item">
+                <span class="info-label">Ausências:</span>
+                {{ total_ausencias|default:0 }}
+            </div>
         </div>
 
         <div class="section">
