--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -79,6 +79,9 @@
                 <i class="material-symbols-rounded opacity-10" style="font-size: 20px;">chat</i> Mensagens
                 <span id="message-count" class="badge-message-count" style="display: none;">0</span>
             </a>
+            <a class="btn btn-outline-primary btn-sm mb-0 me-2" href="/agendamento/calendario/">
+                <i class="material-symbols-rounded opacity-10" style="font-size: 20px;">calendar_month</i> Agenda
+            </a>
             <a class="btn btn-outline-primary btn-sm mb-0 me-2" href="https://sanyahudesigner.com.br" target="_blank">
                 <i class="material-symbols-rounded opacity-10" style="font-size: 20px;">help</i> Ajuda
             </a>
