--- a/templates/dashboard/base.html
+++ b/templates/dashboard/base.html
@@ -133,6 +133,17 @@
                         </a>
                     </li>
                     
+                    <!-- AGENDA -->
+                    <li class="nav-item mt-3">
+                        <h6 class="ps-2 text-uppercase text-xs font-weight-bolder">AGENDA</h6>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link {% if 'agendamento' in request.path %}active{% endif %}" href="/agendamento/calendario/">
+                            <i class="fas fa-calendar-alt me-2"></i>
+                            Calendário
+                        </a>
+                    </li>
+                    
                     <!-- MENSAGENS -->
                     <li class="nav-item mt-3">
                         <h6 class="ps-2 text-uppercase text-xs font-weight-bolder">MENSAGENS</h6>
@@ -174,6 +185,9 @@
                         </a>
                         <a class="btn btn-outline-primary btn-sm mb-0 me-2" href="{% url 'realtime:chat_list' %}">
                             <i class="material-symbols-rounded opacity-10" style="font-size: 20px;">chat</i> Mensagens
+                        </a>
+                        <a class="btn btn-outline-primary btn-sm mb-0 me-2" href="/agendamento/calendario/">
+                            <i class="material-symbols-rounded opacity-10" style="font-size: 20px;">calendar_month</i> Agenda
                         </a>
                         <a class="btn btn-outline-primary btn-sm mb-0 me-2" href="https://sanyahudesigner.com.br" target="_blank">
                             <i class="material-symbols-rounded opacity-10" style="font-size: 20px;">help</i> Ajuda
